# Authenticator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/authenticator/: cli.py  core.py  storage.py  sync.py  tui.py
