[project]
name = "authenticator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click",
    "rich",
    "questionary",
    "pyotp",
    "qrcode",
    "textual",
]

[project.scripts]
auth = "authenticator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
