[project]
name = "hackauth"
version = "0.1.2"
requires-python = ">=3.9"
description = "A polished CLI/TUI authenticator and TOTP manager"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Cret", email = "wenfeng110402@icloud.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Utilities"
]
dependencies = [
    "click",
    "rich",
    "questionary",
    "pyotp",
    "qrcode",
    "textual==7.5.0",
    "pyperclip",
    "opencv-python-headless; platform_system!='Windows'", # Example conditional, but for now lets keep it simple
    "opencv-python",
]

[project.urls]
"Homepage" = "https://github.com/wenfeng110402/Authenticator"
"Bug Tracker" = "https://github.com/wenfeng110402/Authenticator/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/authenticator"]

[project.scripts]
auth = "authenticator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
